--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^6.1.2
   cloud_firestore: ^6.1.0
   google_fonts: ^6.3.2
+  qr_flutter: ^4.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
