--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^6.1.0
   qr_flutter: ^4.1.0
   intl: ^0.19.0
+  argon2: ^1.0.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
