--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cloud_firestore: ^6.1.0
   qr_flutter: ^4.1.0
   intl: ^0.19.0
-  argon2: ^1.0.1
+  crypto: ^3.0.5
   flutter_dotenv: ^5.1.0
 
 dev_dependencies:
@@ -66,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/icons/logout.png
     - assets/icons/profile.png
     - assets/icons/gambarRusak.png
